# trouble.fork

examples/apps/: Cargo.toml
examples/apps/src/: ble_bas_central.rs  ble_bas_peripheral.rs  ble_l2cap_central.rs  ble_l2cap_peripheral.rs
examples/esp32/: Cargo.toml
host/: Cargo.toml
host/src/: lib.rs
