[package]
name = "trouble-host"
version = "0.1.0"
edition = "2021"
description = "An async Rust BLE host"
license = "Apache-2.0 OR MIT"
keywords = ["no-std"]
categories = ["embedded", "hardware-support", "no-std"]
resolver = "2"

[dependencies]
bt-hci = { version = "0.2", features = ["embassy-time", "uuid"] }
embedded-io = { version = "0.6" }
embassy-sync = "0.6"
embassy-time = "0.4"
embassy-futures = "0.1"
futures = { version = "0.3", default-features = false }
heapless = "0.8"
trouble-host-macros = { path = "../host-macros", version = "0.1.0", optional = true }
static_cell = "2.1.0"

# Logging
log = { version = "0.4.16", optional = true }
defmt = { version = "0.3", optional = true }
num_enum = { version = "0.7.3", default-features = false }
thiserror = { version = "2.0.0", default-features = false }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
  "time",
  "rt-multi-thread",
  "macros",
] }
embedded-io-adapters = { version = "0.6.1", features = ["tokio-1"] }
embedded-io = { version = "0.6.1" }
tokio-serial = "5.4"
env_logger = "0.11"
critical-section = { version = "1", features = ["std"] }
rand = "0.8.5"
heapless = "0.8.0"


[features]
defmt = ["dep:defmt", "embassy-time/defmt", "bt-hci/defmt"]
log = ["dep:log"]
peripheral = []
central = []
gatt = []
scan = []
default = ["peripheral", "central", "gatt", "derive"]
controller-host-flow-control = []
derive = ["trouble-host-macros"]
connection-metrics = []

# A few ESP32 chips require the L2CAP MTU to be no less than 255 bytes. For such chips, the application level should
# enable this feature. Otherwise, the BLE runtime gives an "Invalid HCI Command Parameters" error.
#
# With the feature, 'L2CAP_MTU' generic parameter is ignored, and 255 used, instead. This should be safe, since
# protocol-wise largest L2CAP MTU value is 251.
#
# Background can be found in -> https://github.com/embassy-rs/trouble/pull/236#issuecomment-2586457641
#
# Chips not affected:
#   - ESP32, ESP32-{C3|S2|S3}
#
# Chips affected:
#   - ESP32-{C2|C6|H2}
#
l2cap-mtu-255 = []

# BEGIN AUTOGENERATED CONFIG FEATURES
# Generated by gen_config.py. DO NOT EDIT.
connection-event-queue-size-1 = []
connection-event-queue-size-2 = [] # Default
connection-event-queue-size-4 = []
connection-event-queue-size-8 = []
connection-event-queue-size-16 = []
connection-event-queue-size-32 = []
connection-event-queue-size-64 = []

l2cap-rx-queue-size-1 = []
l2cap-rx-queue-size-2 = []
l2cap-rx-queue-size-4 = []
l2cap-rx-queue-size-8 = [] # Default
l2cap-rx-queue-size-16 = []
l2cap-rx-queue-size-32 = []
l2cap-rx-queue-size-64 = []

l2cap-tx-queue-size-1 = []
l2cap-tx-queue-size-2 = []
l2cap-tx-queue-size-4 = []
l2cap-tx-queue-size-8 = [] # Default
l2cap-tx-queue-size-16 = []
l2cap-tx-queue-size-32 = []
l2cap-tx-queue-size-64 = []

l2cap-rx-packet-pool-size-1 = []
l2cap-rx-packet-pool-size-2 = []
l2cap-rx-packet-pool-size-4 = []
l2cap-rx-packet-pool-size-8 = [] # Default
l2cap-rx-packet-pool-size-16 = []
l2cap-rx-packet-pool-size-32 = []
l2cap-rx-packet-pool-size-64 = []
l2cap-rx-packet-pool-size-128 = []
l2cap-rx-packet-pool-size-256 = []
l2cap-rx-packet-pool-size-512 = []

l2cap-tx-packet-pool-size-1 = []
l2cap-tx-packet-pool-size-2 = []
l2cap-tx-packet-pool-size-4 = []
l2cap-tx-packet-pool-size-8 = [] # Default
l2cap-tx-packet-pool-size-16 = []
l2cap-tx-packet-pool-size-32 = []
l2cap-tx-packet-pool-size-64 = []
l2cap-tx-packet-pool-size-128 = []
l2cap-tx-packet-pool-size-256 = []
l2cap-tx-packet-pool-size-512 = []

gatt-client-notification-max-subscribers-1 = [] # Default
gatt-client-notification-max-subscribers-2 = []
gatt-client-notification-max-subscribers-4 = []
gatt-client-notification-max-subscribers-8 = []
gatt-client-notification-max-subscribers-16 = []
gatt-client-notification-max-subscribers-32 = []
gatt-client-notification-max-subscribers-64 = []
gatt-client-notification-max-subscribers-128 = []
gatt-client-notification-max-subscribers-256 = []
gatt-client-notification-max-subscribers-512 = []

gatt-client-notification-queue-size-1 = [] # Default
gatt-client-notification-queue-size-2 = []
gatt-client-notification-queue-size-4 = []
gatt-client-notification-queue-size-8 = []
gatt-client-notification-queue-size-16 = []
gatt-client-notification-queue-size-32 = []
gatt-client-notification-queue-size-64 = []
gatt-client-notification-queue-size-128 = []
gatt-client-notification-queue-size-256 = []
gatt-client-notification-queue-size-512 = []

# END AUTOGENERATED CONFIG FEATURES
